# lidar_ground_segmentation

./: row2.pcd  select2.pcd  select3.pcd
angle/: angle_ground_3_false.pcd  angle_ground_3_true.pcd  angle_ground_false.pcd  angle_ground_true.pcd  angle_nonground_3_false.pcd  angle_nonground_3_true.pcd  angle_nonground_false.pcd  angle_nonground_true.pcd
devel/: .catkin  .rosinstall  setup.sh
devel/lib/cloud_publisher/: cloud_publisher_node
devel/lib/ground_segmentation/: ground_segmentation_node
devel/lib/m_pcd_publisher/: m_pcd_publisher_node
devel/lib/pcd_publisher/: pcd_publisher_node
devel/lib/pcl_plane_model/: pcl_plane_model_node
devel/lib/pkgconfig/: cloud_publisher.pc  communication.pc  diff_helpers.pc  ground_segmentation.pc  image_labelers.pc  m_pcd_publisher.pc  pcd_publisher.pc  pcl_plane_model.pc  projections.pc  ros_bridge.pc  rosbag_to_pcd.pc  utils.pc  visual_odometry.pc
devel/lib/rosbag_to_pcd/: rosbag_to_pcd_node
devel/lib/visual_odometry/: visual_odometry_node
devel/share/cloud_publisher/cmake/: cloud_publisherConfig.cmake
devel/share/communication/cmake/: communicationConfig.cmake
devel/share/diff_helpers/cmake/: diff_helpersConfig.cmake
devel/share/ground_segmentation/cmake/: ground_segmentationConfig.cmake
devel/share/image_labelers/cmake/: image_labelersConfig.cmake
devel/share/m_pcd_publisher/cmake/: m_pcd_publisherConfig.cmake
devel/share/pcd_publisher/cmake/: pcd_publisherConfig.cmake
devel/share/pcl_plane_model/cmake/: pcl_plane_modelConfig.cmake
devel/share/projections/cmake/: projectionsConfig.cmake
devel/share/ros_bridge/cmake/: ros_bridgeConfig.cmake
devel/share/rosbag_to_pcd/cmake/: rosbag_to_pcdConfig.cmake
devel/share/utils/cmake/: utilsConfig.cmake
devel/share/visual_odometry/cmake/: visual_odometryConfig.cmake
plane/: plane_ground_3_false.pcd  plane_ground_3_true.pcd  plane_ground_false.pcd  plane_ground_true.pcd  plane_nonground_3_false.pcd  plane_nonground_3_true.pcd  plane_nonground_false.pcd  plane_nonground_true.pcd
src/cloud_publisher/: CMakeLists.txt
src/cloud_publisher/src/: cloud_publisher.cpp
src/communication/: CMakeLists.txt
src/diff_helpers/: CMakeLists.txt
src/diff_helpers/include/diff_helpers/: abstract_diff.h  angle_diff.h  diff_factory.h  line_dist_diff.h  simple_diff.h
src/diff_helpers/src/: angle_diff.cpp  line_dist_diff.cpp
src/ground_segmentation/: CMakeLists.txt
src/ground_segmentation/include/ground_segmentation/: ground_segmentation.h
src/ground_segmentation/src/: 16_vlp.cpp  32_E.cpp  ground_segmentation.cpp  ground_segmentation_2019_03_23_origin.cpp  ground_segmentation_cache.cpp  ground_segmentation_intensity.cpp  ground_segmentation_origin.cpp  ground_segmentation_project.cpp  ground_segmentation_project_real_point_2019_03_20.cpp  ground_segmentation_second_ground.cpp  ground_segmentation_start_second_ground.cpp
src/image_labelers/: CMakeLists.txt  package.xml
src/image_labelers/include/image_labelers/: abstract_image_labeler.h  dijkstra_image_labeler.h  hash_queue.h  linear_image_labeler.h  linear_image_labeler_kenny.h  pixel_coords.h
src/image_labelers/src/: abstract_image_labeler.cpp
src/itri_pcd/: .~lock.row3.ods#  curb1.pcd  curb2.pcd  curb3.pcd  first1.pcd  first2.pcd  first3.pcd  first4.pcd  horizontal.pcd  row1.ods  row1_project_sample.pcd  row2.ods  row3.ods  row3_project_sample.pcd  select1.pcd  select3.pcd
src/m_pcd_publisher/: CMakeLists.txt
src/m_pcd_publisher/src/: m_pcd_publisher.cpp
src/pcd/: 0.000000000.pcd  1529727896.969578000.pcd  1529727897.069664000.pcd  1529727897.169713000.pcd  1529727897.269804000.pcd  1529727897.369892000.pcd  1529727897.469972000.pcd  1529727897.570091000.pcd  1529727897.670179000.pcd  1529727897.770233000.pcd  1529727897.870329000.pcd  1529727897.970411000.pcd  1529727898.070504000.pcd  1529727898.170664000.pcd  1529727898.270685000.pcd  1529727898.370760000.pcd  1529727898.470846000.pcd  1529727898.570920000.pcd  1529727898.671031000.pcd  1529727898.771092000.pcd  1529727898.871178000.pcd  1529727898.971277000.pcd  1529727899.071380000.pcd  1529727899.171449000.pcd  1529727899.271527000.pcd  1529727899.371621000.pcd  1529727899.471706000.pcd  1529727899.571786000.pcd  1529727899.671869000.pcd  1529727899.771984000.pcd  1529727899.872065000.pcd  1529727899.972167000.pcd  1529727900.072228000.pcd  1529727900.172297000.pcd  1529727900.272413000.pcd  1529727900.372471000.pcd  1529727900.472593000.pcd  1529727900.572673000.pcd  1529727900.672755000.pcd  1529727900.772834000.pcd  (+755 more)
src/pcd_publisher /: CMakeLists.txt  package.xml
src/pcd_publisher /src/: pcd_publisher.cpp
src/pcl_plane_model/: CMakeLists.txt  package.xml
src/pcl_plane_model/src/: pcl_plane_model.cpp
src/projections/: CMakeLists.txt  package.xml
src/projections/include/projections/: cloud_projection.h  projection_params.h  ring_projection.h  spherical_projection.h
src/projections/src/: cloud_projection.cpp  projection_params.cpp  ring_projection.cpp  spherical_projection.cpp
src/robot_pose_ekf/src/: odom_estimation_node.cpp
src/ros_bridge/: CMakeLists.txt
src/ros_bridge/include/ros_bridge/: cloud_odom_ros_subscriber.h
src/rosbag_to_pcd/: CMakeLists.txt
src/rosbag_to_pcd/src/: rosbag_to_pcd.cpp
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: cloud.h  rich_point.h
src/utils/src/: cloud.cpp
src/visual_odometry/: CMakeLists.txt
src/visual_odometry/src/: visual_odometry.cpp
